[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias-env"
version = "1.0.0"
description = "BiasEnv - RL Environment for Bias Detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "phany00"}
]
keywords = ["openenv", "rl", "bias-detection", "hackathon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/phany00/bias-env"
Repository = "https://github.com/phantomgamer378-ship-it/bias-env"

[tool.setuptools]
py-modules = [
    "actions",
    "dataset",
    "environment",
    "grader",
    "rubric",
    "inference",
    "server",
]
